[package]
name = "wasm-pack"
description = "📦✨ your favorite rust -> wasm workflow tool!"
version = "0.13.1"
authors = ["Ashley Williams <ashley666ashley@gmail.com>", "Jesper Håkansson <jesper@jesperh.se>"]
repository = "https://github.com/rustwasm/wasm-pack.git"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
categories = ["wasm"]
documentation = "https://rustwasm.github.io/wasm-pack/"

[dependencies]
anyhow = "1.0"
binary-install = "0.4.1"
cargo_metadata = "0.19.2"
chrono = "0.4.23"
console = "0.15.11"
dialoguer = "0.11.0"
env_logger = { version = "0.11.0", default-features = false }
glob = "0.3.1"
human-panic = "2.0.2"
log = "0.4.17"
parking_lot = "0.12.1"
semver = "1.0.16"
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
siphasher = "1.0"
strsim = "0.11"
clap = { version = "4.2.5", features = ["derive"] }
toml = "0.8"
ureq = { version = "3.0", features = ["json", "socks-proxy"] }
walkdir = "2.3.2"
which = "7.0"
path-clean = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.8"
lazy_static = "1.4.0"
predicates = "3.0.3"
serial_test = "3.2.0"
tempfile = "3.3.0"
