[package]
name = "wasm-pack"
description = "📦✨ your favorite rust -> wasm workflow tool!"
version = "0.13.1"
authors = [
    "Ashley Williams <ashley666ashley@gmail.com>",
    "Jesper Håkansson <jesper@jesperh.se>"
]
repository = "https://github.com/rustwasm/wasm-pack.git"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
categories = ["wasm"]
documentation = "https://rustwasm.github.io/wasm-pack/"

[dependencies]
anyhow = "1.0"
binary-install = "0.4"
cargo_metadata = "0.20"
chrono = "0.4"
console = "0.15"
dialoguer = "0.11"
env_logger = { version = "0.11", default-features = false }
glob = "0.3"
human-panic = "2.0"
log = "0.4"
parking_lot = "0.12"
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
siphasher = "1.0"
strsim = "0.11"
clap = { version = "4.2", features = ["derive"] }
toml = "0.8"
ureq = { version = "3.0", features = ["json", "socks-proxy"] }
walkdir = "2.3"
which = "8.0"
path-clean = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
lazy_static = "1.4"
predicates = "3.0"
serial_test = "3.2"
tempfile = "3.3"
